完善权限